--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
 	"name": "gauravjot-portfolio",
-	"version": "2022.09.08",
+	"version": "23.4.0",
 	"private": true,
 	"dependencies": {
-		"@testing-library/jest-dom": "^5.16.4",
-		"@testing-library/react": "^13.3.0",
-		"@testing-library/user-event": "^13.5.0",
-		"@types/jest": "^29.5.0",
-		"@types/node": "^18.15.11",
-		"@types/react": "^18.0.35",
-		"@types/react-dom": "^18.0.11",
 		"axios": "^0.27.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-helmet": "^6.1.0",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.1",
 		"typescript": "^5.0.4",
@@ -45,6 +39,20 @@
 		]
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^13.3.0",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/jest": "^29.5.0",
+		"@types/node": "^18.15.11",
+		"@types/react": "^18.0.35",
+		"@types/react-dom": "^18.0.11",
+		"@types/react-helmet": "^6.1.6",
+		"@typescript-eslint/typescript-estree": "^5.57.1",
 		"tailwindcss": "^3.3.1"
+	},
+	"overrides": {
+		"@typescript-eslint/typescript-estree": "^5.57.1",
+		"fork-ts-checker-webpack-plugin": "^6.5.3",
+		"typescript": "^5.0.4"
 	}
 }
