--- a/package.json
+++ b/package.json
@@ -1,58 +1,26 @@
 {
-	"name": "gauravjot-portfolio",
-	"version": "23.4.0",
-	"private": true,
-	"dependencies": {
-		"axios": "^0.27.2",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-helmet": "^6.1.0",
-		"react-router-dom": "^6.3.0",
-		"react-scripts": "5.0.1",
-		"typescript": "^5.0.4",
-		"web-vitals": "^2.1.4"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"css": "npx tailwindcss -i ./src/assets/css/tailwind.css -o ./src/assets/css/_main.css",
-		"watch-css": "npx tailwindcss -i ./src/assets/css/tailwind.css -o ./src/assets/css/_main.css --watch"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@testing-library/jest-dom": "^5.16.4",
-		"@testing-library/react": "^13.3.0",
-		"@testing-library/user-event": "^13.5.0",
-		"@types/jest": "^29.5.0",
-		"@types/node": "^18.15.11",
-		"@types/react": "^18.0.35",
-		"@types/react-dom": "^18.0.11",
-		"@types/react-helmet": "^6.1.6",
-		"@typescript-eslint/typescript-estree": "^5.57.1",
-		"tailwindcss": "^3.3.1"
-	},
-	"overrides": {
-		"@typescript-eslint/typescript-estree": "^5.57.1",
-		"fork-ts-checker-webpack-plugin": "^6.5.3",
-		"typescript": "^5.0.4"
-	}
+  "name": "gauravjot.com",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.35",
+    "@types/react-dom": "18.0.11",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.3.5",
+    "eslint": "8.38.0",
+    "eslint-config-next": "13.3.0",
+    "next": "13.3.0",
+    "postcss": "8.4.22",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.1",
+    "typescript": "5.0.4"
+  }
 }
