--- a/package.json
+++ b/package.json
@@ -15,14 +15,29 @@
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.5",
+    "date-fns": "^2.29.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "gray-matter": "^4.0.3",
     "next": "13.3.0",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-format": "^4.0.1",
+    "rehype-raw": "^6.1.1",
+    "rehype-stringify": "^9.0.3",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.2",
+    "remark-parse": "^10.0.1",
+    "remark-prism": "^1.3.6",
+    "remark-rehype": "^10.1.0",
+    "remark-stringify": "^10.0.2",
     "swr": "^2.1.4",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "unified": "^10.1.2"
+  },
+  "devDependencies": {
+    "@types/remark-prism": "^1.3.4"
   }
 }
