--- a/package.json
+++ b/package.json
@@ -23,10 +23,16 @@
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype": "^12.0.1",
+    "rehype-autolink-headings": "^6.1.1",
     "rehype-format": "^4.0.1",
+    "rehype-prism-plus": "^1.5.1",
     "rehype-raw": "^6.1.1",
+    "rehype-slug": "^5.1.0",
     "rehype-stringify": "^9.0.3",
+    "rehype-toc": "^3.0.2",
     "remark": "^14.0.2",
+    "remark-gfm": "^3.0.1",
     "remark-html": "^15.0.2",
     "remark-parse": "^10.0.1",
     "remark-prism": "^1.3.6",
