--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "remark-prism": "^1.3.6",
     "remark-rehype": "^10.1.0",
     "remark-stringify": "^10.0.2",
+    "sharp": "^0.32.1",
     "swr": "^2.1.4",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
