--- a/package.json
+++ b/package.json
@@ -1,51 +1,51 @@
 {
-  "name": "gauravjot.com",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@formspark/use-formspark": "^0.1.39",
-    "@formspree/react": "^2.4.1",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.35",
-    "@types/react-dom": "18.0.11",
-    "autoprefixer": "10.4.14",
-    "axios": "^1.3.5",
-    "date-fns": "^2.29.3",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
-    "gray-matter": "^4.0.3",
-    "next": "13.3.0",
-    "postcss": "8.4.22",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "rehype": "^12.0.1",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-format": "^4.0.1",
-    "rehype-prism-plus": "^1.5.1",
-    "rehype-raw": "^6.1.1",
-    "rehype-slug": "^5.1.0",
-    "rehype-stringify": "^9.0.3",
-    "rehype-toc": "^3.0.2",
-    "remark": "^14.0.2",
-    "remark-gfm": "^3.0.1",
-    "remark-html": "^15.0.2",
-    "remark-parse": "^10.0.1",
-    "remark-prism": "^1.3.6",
-    "remark-rehype": "^10.1.0",
-    "remark-stringify": "^10.0.2",
-    "sharp": "^0.32.1",
-    "swr": "^2.1.4",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.4",
-    "unified": "^10.1.2"
-  },
-  "devDependencies": {
-    "@types/remark-prism": "^1.3.4"
-  }
+	"name": "gauravjot.com",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@formspark/use-formspark": "^0.1.42",
+		"@formspree/react": "^3.0.0",
+		"@types/node": "24.6.2",
+		"@types/react": "19.2.0",
+		"@types/react-dom": "19.2.0",
+		"autoprefixer": "10.4.21",
+		"axios": "^1.12.2",
+		"date-fns": "^4.1.0",
+		"eslint": "9.37.0",
+		"eslint-config-next": "15.5.4",
+		"gray-matter": "^4.0.3",
+		"next": "15.5.4",
+		"postcss": "8.5.6",
+		"react": "19.2.0",
+		"react-dom": "19.2.0",
+		"rehype": "^13.0.2",
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-format": "^5.0.1",
+		"rehype-prism-plus": "^2.0.1",
+		"rehype-raw": "^7.0.0",
+		"rehype-slug": "^6.0.0",
+		"rehype-stringify": "^10.0.1",
+		"rehype-toc": "^3.0.2",
+		"remark": "^15.0.1",
+		"remark-gfm": "^4.0.1",
+		"remark-html": "^16.0.1",
+		"remark-parse": "^11.0.0",
+		"remark-prism": "^1.3.6",
+		"remark-rehype": "^11.1.2",
+		"remark-stringify": "^11.0.0",
+		"sharp": "^0.34.4",
+		"swr": "^2.3.6",
+		"typescript": "5.9.3",
+		"unified": "^11.0.5"
+	},
+	"devDependencies": {
+		"@types/remark-prism": "^1.3.7",
+		"tailwindcss": "3.3.1"
+	}
 }
